update logo font and add 4th slider for banner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <!-- font-family: 'Raleway', sans-serif; great vibes-->
  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
  <link rel="stylesheet" href="css/index.css">
  <link rel="stylesheet" href="css/submenu.css">
@@ -35,6 +36,7 @@
    <div class="mySlides div1 fade"></div>
    <div class="mySlides div2 fade"></div>
    <div class="mySlides div3 fade"></div>
+   <div class="mySlides div4 fade"></div>
    <a onclick="previousSlides()" class="prev">&#10094;</a>
    <a onclick="plusSlides()" class="next">&#10095;</a>
   </div>
