--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,8 @@
   </div>
 
  </div>
+ <aside class="submenu">
+ </aside>
  <footer>
   <div class="container">
    <a href="index.html" class="logo">Art Gallery</a>
