--- a/login.html
+++ b/login.html
@@ -10,14 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-    <link rel="stylesheet" href="css/adminlogin.css">
+    <link rel="stylesheet" href="css/authentication.css">
     <link rel="stylesheet" href="css/submenu.css">
     <link rel="stylesheet" href="css/general.css">
     <title>Admin login</title>
+    
 </head>
 
 <body>
-
+    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="module" src="./js/submenu.js"></script>
   <!-- header area -->
   <header>
     <a href="index.html" class="logo">Art Gallery</a>
@@ -46,14 +48,13 @@
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
     </div>
-
-    <div>
-      <button type="button" class="cancelbtn">Cancel</button>
-    </div>
-    <div><span class="psw">Forgot <a href="forgotpassword.html">password?</a></span</div> </form> <div><a
-          href="adminSignup.html">Need to create a new Account</a></div>
+    <div><span class="psw">Forgot <a href="forgotpassword.html">password?</a></span</div>
     </form>
-    <footer>
+        <div><a href="adminSignup.html">Need to create a new Account</a></div>
+        <aside class="submenu">
+        </aside>
+    <div>
+    <footer class="footer">
         <div class="container">
          <a href="index.html" class="logo">Art Gallery</a>
          <div class="footer-content">
@@ -72,8 +73,7 @@
          </div>
         </div>
        </footer>
-       <script type="text/javascript" src="./js/index.js"></script>
-       <script type="module" src="./js/submenu.js"></script>      
+    </div>      
 </body>
 
 </html>
