--- a/login.html
+++ b/login.html
@@ -10,15 +10,16 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
- <link rel="stylesheet" href="css/general.css">
  <link rel="stylesheet" href="css/authentication.css">
  <link rel="stylesheet" href="css/submenu.css">
-
+ <link rel="stylesheet" href="css/general.css">
  <title>Admin login</title>
+
 </head>
 
 <body>
-
+ <script type="text/javascript" src="./js/index.js"></script>
+ <script type="module" src="./js/submenu.js"></script>
  <!-- header area -->
  <header>
   <a href="index.html" class="logo">Art Gallery</a>
@@ -47,35 +48,31 @@
     <input type="checkbox" checked="checked" name="remember"> Remember me
    </label>
   </div>
-
-  <div>
-   <button type="button" class="cancelbtn">Cancel</button>
-  </div>
   <div><span class="psw">Forgot <a href="forgotpassword.html">password?</a></span</div> </form> <div><a
      href="adminSignup.html">Need to create a new Account</a></div>
- </form>
- <footer>
-  <div class="container">
-   <a href="index.html" class="logo">Art Gallery</a>
-   <div class="footer-content">
-    <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
-   </div>
-   <div class="footer-end">
-    <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
-   </div>
-   <div class="social-icons">
-    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
-    <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
-    <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
-    <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
-   </div>
+  <aside class="submenu">
+  </aside>
+  <div>
+   <footer class="footer">
+    <div class="container">
+     <a href="index.html" class="logo">Art Gallery</a>
+     <div class="footer-content">
+      <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
+     </div>
+     <div class="footer-end">
+      <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
+     </div>
+     <div class="social-icons">
+      <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
+      <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
+      <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
+      <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
+     </div>
+    </div>
+   </footer>
   </div>
- </footer>
- <script type="text/javascript" src="./js/index.js"></script>
- <script type="module" src="./js/submenu.js"></script>
-
 </body>
 
-</html>
+</html
