--- a/login.html
+++ b/login.html
@@ -20,21 +20,9 @@
 <body>
  <script type="text/javascript" src="./js/index.js"></script>
  <script type="module" src="./js/submenu.js"></script>
- <!-- header area -->
- <header>
-  <a href="index.html" class="logo">Art Gallery</a>
-  <nav class="nav-bar">
-   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="category.html" class="link-btn">Photo Gallery</a></li>
-    <li><a href="about.html" class="link-btn">About Us</a></li>
-    <li><a href="contact.html" class="link-btn">Contact Us</a></li>
-   </ul>
-   <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
-  </nav>
- </header>
 
- <form action="#" method="post">
+
+ <form action="#" method="post" class="login-form">
 
   <div class="container">
    <label for="uname"><b>Username</b></label>
@@ -49,29 +37,28 @@
    </label>
   </div>
   <div><span class="psw">Forgot <a href="forgotpassword.html">password?</a></span</div> </form> <div><a
-     href="adminSignup.html">Need to create a new Account</a></div>
-  <aside class="submenu">
-  </aside>
-  <div>
-   <footer class="footer">
-    <div class="container">
-     <a href="index.html" class="logo">Art Gallery</a>
-     <div class="footer-content">
-      <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
-     </div>
-     <div class="footer-end">
-      <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
-     </div>
-     <div class="social-icons">
-      <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
-      <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
-      <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
-      <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
-     </div>
+     href="signUp.html">Need to create a new Account</a></div>
+
+
+  <footer>
+   <div class="container">
+    <a href="index.html" class="logo">Art Gallery</a>
+    <div class="footer-content">
+     <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
     </div>
-   </footer>
+    <div class="footer-end">
+     <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
+    </div>
+    <div class="social-icons">
+     <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
+     </a>
+     <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
+     <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
+     <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
+     <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
+    </div>
+   </div>
+  </footer>
   </div>
 </body>
 
