edit watercolor page css file. submenu still has issue

--- a/category-wator-color.html
+++ b/category-wator-color.html
@@ -28,11 +28,11 @@
     <li><a href="about.html">About Us</a></li>
     <li><a href="contact.html">Contact Us</a></li>
    </ul>
-   <a href="adminlogin.html"><button type="button" class="login-btn">Admin Login</button></a>
+   <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
   </nav>
  </header>
  <div class="container hero">
-  <h1>Oil Painting</h1>
+  <h1>Watercolor</h1>
   <div class="wrapper">
    <div class="image-item">
     <img src="https://afremov.com/images/product/image_2723_3.jpeg" width="600" height="600" alt="">
@@ -81,9 +81,9 @@
    </div>
   </div>
  </div>
+
  <aside class="submenu">
  </aside>
-
  <footer>
   <div class="container">
    <a href="index.html" class="logo">Art Gallery</a>
