now when we click the middle button of home page, it will guide you to gallery main page, which Samira edited.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
   <div class="gallery-button">
    <div>
-    <a href="category.html">
+    <a href="gallery.html">
      <span>ENTER GALLERY</span>
     </a>
    </div>
