--- a/admin-main.html
+++ b/admin-main.html
@@ -75,7 +75,8 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.gclandscape.com%2Fwp-content%2Fuploads%2F2013%2F09%2Fgrass-closeup-nature-outside-summer-spring-yard-lawn-copy.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.gclandscape.com%2Fwp-content%2Fuploads%2F2013%2F09%2Fgrass-closeup-nature-outside-summer-spring-yard-lawn-copy.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 1</td>
@@ -85,7 +86,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftg-cdn.azureedge.net%2Fsites%2Fdefault%2Ffiles%2Fimages%2Fparagraph%2Fitalrb%2Feasy_guide_grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftg-cdn.azureedge.net%2Fsites%2Fdefault%2Ffiles%2Fimages%2Fparagraph%2Fitalrb%2Feasy_guide_grass.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 2</td>
@@ -95,7 +97,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhertzlerandgeorge.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fspring-is-for-planting-most-things-but-not-grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhertzlerandgeorge.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fspring-is-for-planting-most-things-but-not-grass.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 3</td>
@@ -105,7 +108,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftimberpine.files.wordpress.com%2F2009%2F12%2Fmaiden-grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftimberpine.files.wordpress.com%2F2009%2F12%2Fmaiden-grass.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 4</td>
@@ -115,7 +119,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://vmcdn.ca/f/files/shared/miscellaneous-stock-images/grass-lawn.jpeg;w=630" width="100" height="100">
+                            <img src="https://vmcdn.ca/f/files/shared/miscellaneous-stock-images/grass-lawn.jpeg;w=630"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 5</td>
@@ -125,7 +130,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.sciencemag.org%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Farticle_main_large%2Fpublic%2Fimages%2Fgreen-grass-1920.jpg%3Fitok%3D2N3UarPk&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.sciencemag.org%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Farticle_main_large%2Fpublic%2Fimages%2Fgreen-grass-1920.jpg%3Fitok%3D2N3UarPk&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 6</td>
@@ -135,7 +141,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xx8R82kGN0xFxCpZ5CkIDAHaFO%26pid%3DApi&f=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xx8R82kGN0xFxCpZ5CkIDAHaFO%26pid%3DApi&f=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 7</td>
