Created People Category plus its images, CSS and JS files

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column">
                     <div class="gallery-column-content">                  
-                        <a name="People" href="#">
+                        <a name="People" href="category-people.html">
                             <img src="/images/gallery-people.jpg" alt="People">
                         </a>                
                         <h5>People</h5>
