fix the nav bar home button cannot guide to home page issue

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <a href="index.html" class="logo">Art Gallery</a>
         <nav class="nav-bar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="category.html" class="link-btn">Photo Gallery</a></li>
                 <li><a href="about.html" class="link-btn">About Us</a></li>
                 <li><a href="contact.html" class="link-btn">Contact Us</a></li>
@@ -112,11 +112,7 @@
             <p>123 North Pole Dr, North Pole, NP, Arctica 1A1 A1A <br>Tel. +1(777)222-1111 <br> Email <a
                     href="info@gallery.ar">email</a></p>
         </div>
-
-
     </div>
-
-
     </div>
     <aside class="submenu">
     </aside>
