--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <nav class="nav-bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="category.html" class="link-btn">Photo Gallery</a></li>
+                <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
                 <li><a href="about.html" class="link-btn">About Us</a></li>
                 <li><a href="contact.html" class="link-btn">Contact Us</a></li>
             </ul>
