--- a/admin-main.html
+++ b/admin-main.html
@@ -4,22 +4,23 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
+	<script src="js/menu.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- font-family: 'Raleway', sans-serif; great vibes-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style-admin.css">
+	
     <title>Admin Main</title>
 </head>
 
 <body>
-    <input type="checkbox" id="check">
-    <!-- header area -->
+    
     <header>
-        <label for="check">
-            <i class="fa fa-bars" id="sidebar_btn"></i>
-        </label>
+       <div id="main" >
+            <i class="fa fa-bars" id="sidebar_btn" onclick="menu();"></i>
+       </div>
         <div class="left-area">
             <h3>Admin<span>Dashboard</span></h3>
         </div>
@@ -28,7 +29,7 @@
         </div>
     </header>
     <!-- sidebar start -->
-    <div class="side-bar">
+    <div id="side-bar">
         <center>
             <img src="/images/profile-img.png" alt="my photo" class="profile_image">
             <h4>Brenda</h4>
@@ -40,7 +41,6 @@
 
     <div class="content">
         <div class="top-container">
-            <h1>Photo</h1>
             <button type="button" class="add-photo-btn">Create Photo</button>
             <!-- search  -->
             <div class="wrapper">
@@ -75,7 +75,8 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.gclandscape.com%2Fwp-content%2Fuploads%2F2013%2F09%2Fgrass-closeup-nature-outside-summer-spring-yard-lawn-copy.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.gclandscape.com%2Fwp-content%2Fuploads%2F2013%2F09%2Fgrass-closeup-nature-outside-summer-spring-yard-lawn-copy.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 1</td>
@@ -85,7 +86,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftg-cdn.azureedge.net%2Fsites%2Fdefault%2Ffiles%2Fimages%2Fparagraph%2Fitalrb%2Feasy_guide_grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftg-cdn.azureedge.net%2Fsites%2Fdefault%2Ffiles%2Fimages%2Fparagraph%2Fitalrb%2Feasy_guide_grass.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 2</td>
@@ -95,7 +97,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhertzlerandgeorge.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fspring-is-for-planting-most-things-but-not-grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://i.pinimg.com/originals/60/33/0c/60330cc9c1bc3c74257bd11b85a029f8.png"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 3</td>
@@ -105,7 +108,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftimberpine.files.wordpress.com%2F2009%2F12%2Fmaiden-grass.jpg&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftimberpine.files.wordpress.com%2F2009%2F12%2Fmaiden-grass.jpg&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 4</td>
@@ -115,7 +119,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://vmcdn.ca/f/files/shared/miscellaneous-stock-images/grass-lawn.jpeg;w=630" width="100" height="100">
+                            <img src="https://vmcdn.ca/f/files/shared/miscellaneous-stock-images/grass-lawn.jpeg;w=630"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 5</td>
@@ -125,7 +130,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.sciencemag.org%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Farticle_main_large%2Fpublic%2Fimages%2Fgreen-grass-1920.jpg%3Fitok%3D2N3UarPk&f=1&nofb=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.sciencemag.org%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Farticle_main_large%2Fpublic%2Fimages%2Fgreen-grass-1920.jpg%3Fitok%3D2N3UarPk&f=1&nofb=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 6</td>
@@ -135,7 +141,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xx8R82kGN0xFxCpZ5CkIDAHaFO%26pid%3DApi&f=1" width="100" height="100">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xx8R82kGN0xFxCpZ5CkIDAHaFO%26pid%3DApi&f=1"
+                                width="100" height="100">
                         </td>
                         <td>Photo ID</td>
                         <td>Photo 7</td>
