--- a/admin-main.html
+++ b/admin-main.html
@@ -4,22 +4,23 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
+    <script src="js/admin-menu.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- font-family: 'Raleway', sans-serif; great vibes-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style-admin.css">
+
     <title>Admin Main</title>
 </head>
 
 <body>
-    <input type="checkbox" id="check">
-    <!-- header area -->
+
     <header>
-        <label for="check">
-            <i class="fa fa-bars" id="sidebar_btn"></i>
-        </label>
+        <div id="main">
+            <i class="fa fa-bars" id="sidebar_btn" onclick="menu();"></i>
+        </div>
         <div class="left-area">
             <h3>Admin<span>Dashboard</span></h3>
         </div>
@@ -28,9 +29,10 @@
         </div>
     </header>
     <!-- sidebar start -->
-    <div class="side-bar">
+    <div id="side-bar">
         <center>
-            <img src="/images/profile-img.png" alt="my photo" class="profile_image">
+            <img src="https://i.cbc.ca/1.5045667.1551908692!/fileImage/httpImage/image.jpg_gen/derivatives/original_780/nora-galbraith-senior-analyst-statistics-canada.jpg"
+                alt="my photo" class="profile_image">
             <h4>Brenda</h4>
         </center>
         <a href="admin-main.html"><i class="fa fa-image"></i><span>Photo List</span></a>
@@ -40,7 +42,6 @@
 
     <div class="content">
         <div class="top-container">
-            <h1>Photo</h1>
             <button type="button" class="add-photo-btn">Create Photo</button>
             <!-- search  -->
             <div class="wrapper">
@@ -97,7 +98,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhertzlerandgeorge.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fspring-is-for-planting-most-things-but-not-grass.jpg&f=1&nofb=1"
+                            <img src="https://i.pinimg.com/originals/60/33/0c/60330cc9c1bc3c74257bd11b85a029f8.png"
                                 width="100" height="100">
                         </td>
                         <td>Photo ID</td>
