Adjust link on submenu of about page.

--- a/about.html
+++ b/about.html
@@ -1,100 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Common Header-->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- font-family: 'Raleway', sans-serif; great vibes-->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <!-- font-family: 'Raleway', sans-serif; great vibes-->
+ <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
 
-    <link rel="stylesheet" href="css/submenu.css">
-    <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/about.css">
-    <title>About us</title>
+ <link rel="stylesheet" href="css/submenu.css">
+ <link rel="stylesheet" href="css/general.css">
+ <link rel="stylesheet" href="css/about.css">
+ <title>About us</title>
 </head>
+
 <body>
-    <header>
-        <a href="index.html" class="logo">Art Gallery</a>
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="category.html" class="link-btn">Photo Gallery</a></li>
-                <li><a href="about.html" class="link-btn">About Us</a></li>
-                <li><a href="contact.html" class="link-btn">Contact Us</a></li>
-            </ul>
-            <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
-        </nav>
-    </header>
-<!-- End of Common Header-->
+ <header>
+  <a href="index.html" class="logo">Art Gallery</a>
+  <nav class="nav-bar">
+   <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
+    <li><a href="about.html" class="link-btn">About Us</a></li>
+    <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+   </ul>
+   <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
+  </nav>
+ </header>
+ <!-- End of Common Header-->
 
-<!-- Kelly's code below-->
-    <h1>
-        About us
-    </h1>
-    <div class="parent">
-        <p class="text">Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in photography.
-        </p>
-    </div>
-    <div class="parent">
-        <div class="child">
-            <img src="images/aboutUsImages/CEO.png" height="200px" width="200px">
-            <br>
-            <h3>CEO</h3>
-            <br>
-            <p>This is our CEO, she's great</p>
-        </div>
-        <div class="child">
-            <img src="images/aboutUsImages/EquipmentManager.png" height="200px" width="200px">
-            <br>
-            <h3>Equipment Manager</h3>
-            <br>
-            <p>This is our Equipment Manager, she's great</p>
-        </div>
-    </div>
-    <div class="parent">
-        <div class="child">
-            <img src="images/aboutUsImages/BookingsManager.png" height="200px" width="200px">
-            <br>
-            <h3>Bookings Manager</h3>
-            <br>
-            <p>This is our Bookings Manager, he's great</p>
-        </div>
-        <div class="child">
-            <img src="images/aboutUsImages/Photographer.png" height="200px" width="200px">
-            <br>
-            <h3>Photographer</h3>
-            <br>
-            <p>This is our Photographer, he's great</p>
-        </div>
-    </div>
-    <!-- Kelly's code ended-->
+ <!-- Kelly's code below-->
+ <h1>
+  About us
+ </h1>
+ <div class="parent">
+  <p class="text">Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography. Here's a little bit about our team. We're a small, but passionate design studio specializing in
+   photography.
+  </p>
+ </div>
+ <div class="parent">
+  <div class="child">
+   <img src="images/aboutUsImages/CEO.png" height="200px" width="200px">
+   <br>
+   <h3>CEO</h3>
+   <br>
+   <p>This is our CEO, she's great</p>
+  </div>
+  <div class="child">
+   <img src="images/aboutUsImages/EquipmentManager.png" height="200px" width="200px">
+   <br>
+   <h3>Equipment Manager</h3>
+   <br>
+   <p>This is our Equipment Manager, she's great</p>
+  </div>
+ </div>
+ <div class="parent">
+  <div class="child">
+   <img src="images/aboutUsImages/BookingsManager.png" height="200px" width="200px">
+   <br>
+   <h3>Bookings Manager</h3>
+   <br>
+   <p>This is our Bookings Manager, he's great</p>
+  </div>
+  <div class="child">
+   <img src="images/aboutUsImages/Photographer.png" height="200px" width="200px">
+   <br>
+   <h3>Photographer</h3>
+   <br>
+   <p>This is our Photographer, he's great</p>
+  </div>
+ </div>
+ <!-- Kelly's code ended-->
 
-    <!-- Common Footer-->
-    <footer>
-        <div class="container">
-            <a href="index.html" class="logo">Art Gallery</a>
-            <div class="footer-content">
-                <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
-            </div>
-            <div class="footer-end">
-                <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
-            </div>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
-                </a>
-                <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
-                <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
-                <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
-            </div>
-        </div>
-    </footer>
-    <script type="text/javascript" src="./js/index.js"></script>
-    <script type="module" src="./js/submenu.js"></script>
-    <!-- End of Common Footer-->
+ <!-- Common Footer-->
+ <footer>
+  <div class="container">
+   <a href="index.html" class="logo">Art Gallery</a>
+   <div class="footer-content">
+    <p>Tagline lorem ipsum dolor sit amet, consectetur adipiscing eiusmod</p>
+   </div>
+   <div class="footer-end">
+    <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
+   </div>
+   <div class="social-icons">
+    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://www.youtube.com/""><i class=" fab fa-youtube"></i> </a>
+    <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i> </a>
+    <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i> </a>
+    <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> </a>
+   </div>
+  </div>
+ </footer>
+ <script type="text/javascript" src="./js/index.js"></script>
+ <script type="module" src="./js/submenu.js"></script>
+ <!-- End of Common Footer-->
 </body>
+
 </html>
