--- a/about.html
+++ b/about.html
@@ -11,7 +11,6 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-
  <link rel="stylesheet" href="css/submenu.css">
  <link rel="stylesheet" href="css/general.css">
  <link rel="stylesheet" href="css/about.css">
@@ -83,6 +82,8 @@
  </div>
  <!-- Kelly's code ended-->
 
+ <aside class="submenu">
+ </aside>
  <!-- Common Footer-->
  <footer>
   <div class="container">
